--- a/resources/sass/msu/partials/_ant.scss
+++ b/resources/sass/msu/partials/_ant.scss
@@ -229,8 +229,6 @@
 }
 
 .ant-table-content {
-  overflow-x: scroll;
-
   .ant-table-thead > tr > th {
     font-size: rem-calc(12);
     font-weight: $font-weight-bold;
